# substrate-event-hash-calculator

./: Cargo.toml  README.md
src/: main.rs
