[package]
name = "substrate-event-hash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ink = "4.2.0"
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
